-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P5
-
Affects Version/s: 21
-
Component/s: hotspot
-
b15
While looking at JDK-8367242, I noticed below weird output from the assert in PhaseGVN::dead_loop_check:
----------stdout:(29/6957)*----------
dist dump
---------------------------------------------
3 \u001b[33m 0\u001b[0m \u001b[33mRoot\u001b[0m === \u001b[33m0\u001b[0m 128\u001b[0m 147\u001b[0m 158\u001b[0m 169\u001b[0m 180\u001b[0m 202\u001b[0m 224\u001b[0m 241\u001b[0m 262\u001b[0m 6429\u001b[0m 306\u001b[0m 327\u001b[0m 374\u001b[0m 386\u001b[0m 500\u001b[0m 558\u001b[0m 589\u001b[0m 638\u001b[0m 696\u001b[0m 735\u001b[0m 781\u001b[0m 796\u001b[0m 832\u001b[0m 868\u001b[0m 901\u001b[0m 932\u001b[0m 944\u001b[0m 983\u001b[0m 1022\u001b[0m 1057\u001b[0m 1103\u001b[0m 1148\u001b[0m 1160\u001b[0m 1265\u001b[0m 1321\u001b[0m 1352\u001b[0m 1393\u001b[0m 1438\u001b[0m 1450\u001b[0m 1558\u001b[0m 1611\u001b[0m 1642\u001b[0m 1673\u001b[0m 1703\u001b[0m 1738\u001b[0m 1790\u001b[0m 1835\u001b[0m 1845\u001b[0m 1855\u001b[0m 1865\u001b[0m 1894\u001b[0m 1910\u001b[0m 1932\u001b[0m 1948\u001b[0m 1966\u001b[0m 2135\u001b[0m 2166\u001b[0m 2176\u001b[0m 2186\u001b[0m 2196\u001b[0m 2245\u001b[0m 2261\u001b[0m 2287\u001b[0m 2324\u001b[0m 2361\u001b[0m 2380\u001b[0m 2417\u001b[0m 2461\u001b[0m 2478\u001b[0m 2511\u001b[0m 2553\u001b[0m 2595\u001b[0m 2720\u001b[0m 2800\u001b[0m 2817\u001b[0m 2894\u001b[0m 2931\u001b[0m 2991\u001b[0m 3016\u001b[0m 3087\u001b[0m 3166\u001b[0m 3182\u001b[0m 3259\u001b[0m 3293\u001b[0m 3351\u001b[0m 3376\u001b[0m 3422\u001b[0m 3456\u001b[0m 3534\u001b[0m 3570\u001b[0m 3597\u001b[0m 3637\u001b[0m 3673\u001b[0m 3690\u001b[0m 3728\u001b[0m 3787\u001b[0m 3830\u001b[0m 3880\u001b[0m 3921\u001b[0m 3959\u001b[0m 3999\u001b[0m 4038\u001b[0m 4117\u001b[0m 4161\u001b[0m 4176\u001b[0m 4211\u001b[0m 4246\u001b[0m 4278\u001b[0m 6428\u001b[0m 6415\u001b[0m 6383\u001b[0m 6368\u001b[0m 6345\u001b[0m 6244\u001b[0m 4461\u001b[0m 4476\u001b[0m 4497\u001b[0m 4513\u001b[0m 4610\u001b[0m 4620\u001b[0m 4630\u001b[0m 4640\u001b[0m 4684\u001b[0m 4704\u001b[0m 4721\u001b[0m 4761\u001b[0m 4805\u001b[0m 4841\u001b[0m 4882\u001b[0m 4918\u001b[0m 4958\u001b[0m 5104\u001b[0m 5123\u001b[0m 5141\u001b[0m 5172\u001b[0m 5213\u001b[0m 5246\u001b[0m 5291\u001b[0m 5336\u001b[0m 5348\u001b[0m 5453\u001b[0m 5509\u001b[0m 5540\u001b[0m 5581\u001b[0m 5626\u001b[0m 5638\u001b[0m 5746\u001b[0m 5799\u001b[0m 5830\u001b[0m 5861\u001b[0m 5891\u001b[0m 5926\u001b[0m 5991\u001b[0m 6035\u001b[0m 6050\u001b[0m 6085\u001b[0m 6120\u001b[0m 6152\u001b[0m 6183\u001b[0m |4983\u001b[0m 5016\u001b[0m 4000\u001b[0m 613\u001b[0m 4064\u001b[0m 622\u001b[0m [[ \u001b[33m0\u001b[0m 1\u001b[0m 3\u001b[0m 19\u001b[0m 20\u001b[0m 6225\u001b[0m 26\u001b[0m 28\u001b[0m 6168\u001b[0m 32\u001b[0m 5174\u001b[0m 36\u001b[0m 5128\u001b[0m 40\u001b[0m 5105\u001b[0m 44\u001b[0m 5089\u001b[0m 48\u001b[0m 57\u001b[0m 60\u001b[0m 68\u001b[0m 78\u001b[0m 97\u001b[0m 107\u001b[0m 5078\u001b[0m 123\u001b[0m \u001b[34m137\u001b[0m 142\u001b[0m 153\u001b[0m 164\u001b[0m 175\u001b[0m 197\u001b[0m 204\u001b[0m 208\u001b[0m 219\u001b[0m 236\u001b[0m 264\u001b[0m 301\u001b[0m 307\u001b[0m 4318\u001b[0m 369\u001b[0m 415\u001b[0m 416\u001b[0m 419\u001b[0m 3782\u001b[0m 432\u001b[0m 438\u001b[0m 495\u001b[0m 3760\u001b[0m 536\u001b[0m 3715\u001b[0m 542\u001b[0m 599\u001b[0m 615\u001b[0m 3504\u001b[0m 717\u001b[0m 719\u001b[0m 2976\u001b[0m 768\u001b[0m 808\u001b[0m 844\u001b[0m 879\u001b[0m 916\u001b[0m 946\u001b[0m 958\u001b[0m 968\u001b[0m 985\u001b[0m 1006\u001b[0m 2917\u001b[0m 1042\u001b[0m 2895\u001b[0m 2802\u001b[0m 2704\u001b[0m 1879\u001b[0m 1927\u001b[0m 1953\u001b[0m 1986\u001b[0m 1987\u001b[0m 2635\u001b[0m 2230\u001b[0m 6431\u001b[0m 6455\u001b[0m 6544\u001b[0m 6589\u001b[0m 6613\u001b[0m ]]
2 \u001b[34m 137\u001b[0m \u001b[34mConI\u001b[0m === \u001b[33m0\u001b[0m [[ 138\u001b[0m 149\u001b[0m 160\u001b[0m 171\u001b[0m 311\u001b[0m 6281\u001b[0m 6162\u001b[0m 351\u001b[0m 5812\u001b[0m 5686\u001b[0m 437\u001b[0m 5522\u001b[0m 5393\u001b[0m 5314\u001b[0m 6615\u001b[0m 2147\u001b[0m \u001b[34m4982\u001b[0m 571\u001b[0m 612\u001b[0m 4632\u001b[0m 4622\u001b[0m 4612\u001b[0m 4602\u001b[0m 1498\u001b[0m 914\u001b[0m 1837\u001b[0m 1847\u001b[0m 1334\u001b[0m 4063\u001b[0m 1624\u001b[0m 1126\u001b[0m 1857\u001b[0m 1827\u001b[0m 1205\u001b[0m 2188\u001b[0m 2178\u001b[0m 2168\u001b[0m 2158\u001b[0m ]] #int:1
1 \u001b[34m 4982\u001b[0m \u001b[34mAddI\u001b[0m === _ \u001b[34m4982\u001b[0m \u001b[34m137\u001b[0m [[ 4967\u001b[0m 4983\u001b[0m 4988\u001b[0m 5016\u001b[0m 4770\u001b[0m 4814\u001b[0m 4850\u001b[0m 4730\u001b[0m 4891\u001b[0m 4680\u001b[0m 4927\u001b[0m 4652\u001b[0m \u001b[34m4982\u001b[0m 4472\u001b[0m 4636\u001b[0m 4525\u001b[0m 4626\u001b[0m 4552\u001b[0m \u001b[34m6614\u001b[0m 4616\u001b[0m 4572\u001b[0m 4606\u001b[0m ]] !orig=[4649] !jvms: ClassWriter::writeCode @ bci:768 (line 1191)
0 \u001b[34m 6614\u001b[0m \u001b[34mConv2B\u001b[0m === _ \u001b[34m4982\u001b[0m [[ 6615\u001b[0m ]]
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/7b1a61fd-59de-400e-939e-76c8ba818320-S79133/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/89e65d44-9858-4868-a3b8-5b857e37a386/runs/d2323c42-60dc-48d5-99fb-eb7e1f7c3f8f/workspace/open/src/hotspot/share/opto/phaseX.cpp:784), pid=2298943, tid=2298961
# assert(no_dead_loop) failed: dead loop detected
#
# JRE version: Java(TM) SE Runtime Environment (25.0) (fastdebug build 25-lworld5ea-LTS-2025-09-08-1426469.tobias.hartmann.valhalla)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-lworld5ea-LTS-2025-09-08-1426469.tobias.hartmann.valhalla, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x15c946c] PhaseGVN::dead_loop_check(Node*) [clone .part.0]+0x1a8
I think this is a regression fromJDK-8280126 which changed 'dump' into 'dump_bfs' which includes color codes:
- if (!no_dead_loop) n->dump(3);
+ if (!no_dead_loop) n->dump_bfs(100,0,"#");
----------stdout:(29/6957)*----------
dist dump
---------------------------------------------
3 \u001b[33m 0\u001b[0m \u001b[33mRoot\u001b[0m === \u001b[33m0\u001b[0m 128\u001b[0m 147\u001b[0m 158\u001b[0m 169\u001b[0m 180\u001b[0m 202\u001b[0m 224\u001b[0m 241\u001b[0m 262\u001b[0m 6429\u001b[0m 306\u001b[0m 327\u001b[0m 374\u001b[0m 386\u001b[0m 500\u001b[0m 558\u001b[0m 589\u001b[0m 638\u001b[0m 696\u001b[0m 735\u001b[0m 781\u001b[0m 796\u001b[0m 832\u001b[0m 868\u001b[0m 901\u001b[0m 932\u001b[0m 944\u001b[0m 983\u001b[0m 1022\u001b[0m 1057\u001b[0m 1103\u001b[0m 1148\u001b[0m 1160\u001b[0m 1265\u001b[0m 1321\u001b[0m 1352\u001b[0m 1393\u001b[0m 1438\u001b[0m 1450\u001b[0m 1558\u001b[0m 1611\u001b[0m 1642\u001b[0m 1673\u001b[0m 1703\u001b[0m 1738\u001b[0m 1790\u001b[0m 1835\u001b[0m 1845\u001b[0m 1855\u001b[0m 1865\u001b[0m 1894\u001b[0m 1910\u001b[0m 1932\u001b[0m 1948\u001b[0m 1966\u001b[0m 2135\u001b[0m 2166\u001b[0m 2176\u001b[0m 2186\u001b[0m 2196\u001b[0m 2245\u001b[0m 2261\u001b[0m 2287\u001b[0m 2324\u001b[0m 2361\u001b[0m 2380\u001b[0m 2417\u001b[0m 2461\u001b[0m 2478\u001b[0m 2511\u001b[0m 2553\u001b[0m 2595\u001b[0m 2720\u001b[0m 2800\u001b[0m 2817\u001b[0m 2894\u001b[0m 2931\u001b[0m 2991\u001b[0m 3016\u001b[0m 3087\u001b[0m 3166\u001b[0m 3182\u001b[0m 3259\u001b[0m 3293\u001b[0m 3351\u001b[0m 3376\u001b[0m 3422\u001b[0m 3456\u001b[0m 3534\u001b[0m 3570\u001b[0m 3597\u001b[0m 3637\u001b[0m 3673\u001b[0m 3690\u001b[0m 3728\u001b[0m 3787\u001b[0m 3830\u001b[0m 3880\u001b[0m 3921\u001b[0m 3959\u001b[0m 3999\u001b[0m 4038\u001b[0m 4117\u001b[0m 4161\u001b[0m 4176\u001b[0m 4211\u001b[0m 4246\u001b[0m 4278\u001b[0m 6428\u001b[0m 6415\u001b[0m 6383\u001b[0m 6368\u001b[0m 6345\u001b[0m 6244\u001b[0m 4461\u001b[0m 4476\u001b[0m 4497\u001b[0m 4513\u001b[0m 4610\u001b[0m 4620\u001b[0m 4630\u001b[0m 4640\u001b[0m 4684\u001b[0m 4704\u001b[0m 4721\u001b[0m 4761\u001b[0m 4805\u001b[0m 4841\u001b[0m 4882\u001b[0m 4918\u001b[0m 4958\u001b[0m 5104\u001b[0m 5123\u001b[0m 5141\u001b[0m 5172\u001b[0m 5213\u001b[0m 5246\u001b[0m 5291\u001b[0m 5336\u001b[0m 5348\u001b[0m 5453\u001b[0m 5509\u001b[0m 5540\u001b[0m 5581\u001b[0m 5626\u001b[0m 5638\u001b[0m 5746\u001b[0m 5799\u001b[0m 5830\u001b[0m 5861\u001b[0m 5891\u001b[0m 5926\u001b[0m 5991\u001b[0m 6035\u001b[0m 6050\u001b[0m 6085\u001b[0m 6120\u001b[0m 6152\u001b[0m 6183\u001b[0m |4983\u001b[0m 5016\u001b[0m 4000\u001b[0m 613\u001b[0m 4064\u001b[0m 622\u001b[0m [[ \u001b[33m0\u001b[0m 1\u001b[0m 3\u001b[0m 19\u001b[0m 20\u001b[0m 6225\u001b[0m 26\u001b[0m 28\u001b[0m 6168\u001b[0m 32\u001b[0m 5174\u001b[0m 36\u001b[0m 5128\u001b[0m 40\u001b[0m 5105\u001b[0m 44\u001b[0m 5089\u001b[0m 48\u001b[0m 57\u001b[0m 60\u001b[0m 68\u001b[0m 78\u001b[0m 97\u001b[0m 107\u001b[0m 5078\u001b[0m 123\u001b[0m \u001b[34m137\u001b[0m 142\u001b[0m 153\u001b[0m 164\u001b[0m 175\u001b[0m 197\u001b[0m 204\u001b[0m 208\u001b[0m 219\u001b[0m 236\u001b[0m 264\u001b[0m 301\u001b[0m 307\u001b[0m 4318\u001b[0m 369\u001b[0m 415\u001b[0m 416\u001b[0m 419\u001b[0m 3782\u001b[0m 432\u001b[0m 438\u001b[0m 495\u001b[0m 3760\u001b[0m 536\u001b[0m 3715\u001b[0m 542\u001b[0m 599\u001b[0m 615\u001b[0m 3504\u001b[0m 717\u001b[0m 719\u001b[0m 2976\u001b[0m 768\u001b[0m 808\u001b[0m 844\u001b[0m 879\u001b[0m 916\u001b[0m 946\u001b[0m 958\u001b[0m 968\u001b[0m 985\u001b[0m 1006\u001b[0m 2917\u001b[0m 1042\u001b[0m 2895\u001b[0m 2802\u001b[0m 2704\u001b[0m 1879\u001b[0m 1927\u001b[0m 1953\u001b[0m 1986\u001b[0m 1987\u001b[0m 2635\u001b[0m 2230\u001b[0m 6431\u001b[0m 6455\u001b[0m 6544\u001b[0m 6589\u001b[0m 6613\u001b[0m ]]
2 \u001b[34m 137\u001b[0m \u001b[34mConI\u001b[0m === \u001b[33m0\u001b[0m [[ 138\u001b[0m 149\u001b[0m 160\u001b[0m 171\u001b[0m 311\u001b[0m 6281\u001b[0m 6162\u001b[0m 351\u001b[0m 5812\u001b[0m 5686\u001b[0m 437\u001b[0m 5522\u001b[0m 5393\u001b[0m 5314\u001b[0m 6615\u001b[0m 2147\u001b[0m \u001b[34m4982\u001b[0m 571\u001b[0m 612\u001b[0m 4632\u001b[0m 4622\u001b[0m 4612\u001b[0m 4602\u001b[0m 1498\u001b[0m 914\u001b[0m 1837\u001b[0m 1847\u001b[0m 1334\u001b[0m 4063\u001b[0m 1624\u001b[0m 1126\u001b[0m 1857\u001b[0m 1827\u001b[0m 1205\u001b[0m 2188\u001b[0m 2178\u001b[0m 2168\u001b[0m 2158\u001b[0m ]] #int:1
1 \u001b[34m 4982\u001b[0m \u001b[34mAddI\u001b[0m === _ \u001b[34m4982\u001b[0m \u001b[34m137\u001b[0m [[ 4967\u001b[0m 4983\u001b[0m 4988\u001b[0m 5016\u001b[0m 4770\u001b[0m 4814\u001b[0m 4850\u001b[0m 4730\u001b[0m 4891\u001b[0m 4680\u001b[0m 4927\u001b[0m 4652\u001b[0m \u001b[34m4982\u001b[0m 4472\u001b[0m 4636\u001b[0m 4525\u001b[0m 4626\u001b[0m 4552\u001b[0m \u001b[34m6614\u001b[0m 4616\u001b[0m 4572\u001b[0m 4606\u001b[0m ]] !orig=[4649] !jvms: ClassWriter::writeCode @ bci:768 (line 1191)
0 \u001b[34m 6614\u001b[0m \u001b[34mConv2B\u001b[0m === _ \u001b[34m4982\u001b[0m [[ 6615\u001b[0m ]]
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/7b1a61fd-59de-400e-939e-76c8ba818320-S79133/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/89e65d44-9858-4868-a3b8-5b857e37a386/runs/d2323c42-60dc-48d5-99fb-eb7e1f7c3f8f/workspace/open/src/hotspot/share/opto/phaseX.cpp:784), pid=2298943, tid=2298961
# assert(no_dead_loop) failed: dead loop detected
#
# JRE version: Java(TM) SE Runtime Environment (25.0) (fastdebug build 25-lworld5ea-LTS-2025-09-08-1426469.tobias.hartmann.valhalla)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-lworld5ea-LTS-2025-09-08-1426469.tobias.hartmann.valhalla, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x15c946c] PhaseGVN::dead_loop_check(Node*) [clone .part.0]+0x1a8
I think this is a regression from
- if (!no_dead_loop) n->dump(3);
+ if (!no_dead_loop) n->dump_bfs(100,0,"#");
- caused by
-
JDK-8280126 C2: detect and remove dead irreducible loops
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/2826d170
-
Review(master)
openjdk/jdk/27175