8367243: Format issues with dist dump debug output in PhaseGVN::dead_loop_check

Reviewed-by: thartmann